make.log
DKMS make.log for nikal-19.2.0f0 for kernel 5.1.18-300.fc30.x86_64 (x86_64)
Tue 13 Aug 11:21:51 KST 2019
Using kernel headers found in:
    /lib/modules/5.1.18-300.fc30.x86_64/build
If this location is not correct, then set the KERNELHEADERS
environment variable to the location of the kernel headers.

Verifying that KERNELHEADERS has a valid kernel source path:
    Passed.

Using kernel configuration files found in:
    /lib/modules/5.1.18-300.fc30.x86_64/build
If this location is not correct, then set the KERNELVER
environment variable to the name of an installed kernel, or
set KERNELDIR to the location of the kernel configuration files.

Verifying that KERNELDIR has a valid kernel config path:
    Passed.

Testing kernel capabilities and interfaces:
    Kernel has version.h in include/generated/uapi/: yes
    Kernel's struct module layout members: init_layout and core_layout
    Number of arguments for do_munmap(): 4 (uf)
    Kernel has vm_mmap(): yes
    Kernel has vm_munmap(): yes
    Kernel has VM_RESERVED: no
    vm_operations_struct fault handler callback takes a vm_area_struct parameter: no
    Kernel get_user_pages() requires: implicit "current" task and combined page flags param.
    Kernel struct pci_dev has busn_res member: yes
    Kernel acpi_op_remove callback has additional "type" parameter: no
    pte_offset function: pte_offset_kernel()
    Levels in page table: 5
    Kernel has kzalloc: yes
    Kernel has chained SGL support: limited
    USB altsetting name: cur_altsetting
    Kernel has usb_get_intf(): yes
    Kernel has intf_cache member in usb_host_config: yes
    Kernel has ep[] members in usb_device: yes
    Kernel exports usb_set_configuration(): yes
    Units of USB_CTRL_GET_TIMEOUT: msec
    Kernel has mutex method: yes
    Kernel has wait_for_completion_interruptible: yes
    Kernel has work_struct and delayed_work: yes
    Kernel timer_list has data member: no
    Kernel has ioremap_wc: yes
    Kernel has cred.h: yes
    Kernel has uidgid.h: yes
    Kernel has UMH constants: no
    Kernel has create_proc_read_entry: no
    Kernel has namespaced generic netlink API: yes
    Kernel has genlmsg_new: yes
    Kernel has family genlmsg_put: yes
    Kernel genl_family member 'ops' is public: yes
    Kernel has family genl_ops_groups: no
    Kernel has RS-485 serial_core support: no
    Kernel RS-485 config options are per-uart: yes
    Kernel struct uart_ops has set_wake(): no
    Kernel uses tty_port instead of tty_struct for tty helper functions: yes
 
Writing detected kernel capabilities to Kbuild
If the values stored are incorrect they can be changed before running make.
 
Making nikal.ko
  CC [M]  /var/lib/dkms/nikal/19.2.0f0/build/nikal.o
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:744:13: error: initialization of ‘vm_fault_t (*)(struct vm_fault *)’ {aka ‘unsigned int (*)(struct vm_fault *)’} from incompatible pointer type ‘int (*)(nLinux_vmFault *)’ {aka ‘int (*)(struct vm_fault *)’} [-Werror=incompatible-pointer-types]
  744 |    .fault = nNIKAL190_vmaPageFaultHandler,
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:744:13: note: (near initialization for ‘nNIKAL100_vmaOps.fault’)
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:749:13: error: initialization of ‘vm_fault_t (*)(struct vm_fault *)’ {aka ‘unsigned int (*)(struct vm_fault *)’} from incompatible pointer type ‘int (*)(nLinux_vmFault *)’ {aka ‘int (*)(struct vm_fault *)’} [-Werror=incompatible-pointer-types]
  749 |    .fault = nNIKAL220_vmaPageFaultHandlerPageList,
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:749:13: note: (near initialization for ‘nNIKAL220_vmaOpsPageList.fault’)
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c: In function ‘nNIKAL100_doMMap’:
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:3729:7: error: ‘MAP_SHARED’ undeclared (first use in this function); did you mean ‘VM_SHARED’?
 3729 |       MAP_SHARED, offset);
      |       ^~~~~~~~~~
      |       VM_SHARED
/var/lib/dkms/nikal/19.2.0f0/build/nikal.c:3729:7: note: each undeclared identifier is reported only once for each function it appears in
cc1: some warnings being treated as errors
make[2]: *** [scripts/Makefile.build:282: /var/lib/dkms/nikal/19.2.0f0/build/nikal.o] Error 1
make[1]: *** [Makefile:1575: _module_/var/lib/dkms/nikal/19.2.0f0/build] Error 2
make: *** [Makefile:92: nikal.ko] Error 2
